--- a/docker/docker.env
+++ b/docker/docker.env
@@ -1,14 +1,10 @@
 # ------------- Server Configuration-------------
-SERVER_PORT_LISTENING=3010
+SERVER_PORT_LISTENING=3120
 CORS_ALLOW_ORIGINS=https://remote-plan.work,http://localhost,http://host.docker.internal,http://localhost:3000
 # ------------- Server Configuration-------------
-# ------------- Auth0 Provider Configuration-------------
-AUTH0_AUDIENCE=https://plan-resource-server.herokuapp.com
-AUTH0_ISSUER_URL=https://workingremote.auth0.com
-# ------------- Auth0 Provider Configuration-------------
 # ------------- DB Configuration-------------
 HOST_DB_CONFIG=host.docker.internal
-PORT_DB_CONFIG=1090
+PORT_DB_CONFIG=5433
 DATABASE_NAME_DB_CONFIG=remotejob
 USER_NAME_DB_CONFIG=postgres
 USER_PASSWORD_DB_CONFIG=postgres
@@ -25,5 +21,14 @@ RABBITMQ_USERNAME=admin
 RABBITMQ_PASSWORD=13fa34d6e2e399b9d48c8749829a93f913c75fa9eb6fae43
 # --- Application queue names ---
 INVOICE_STATUS_ON_RELATED_PLANS_RABBITMQ_QUEUE_NAME=invoice-status-on-related-plans
-PLANS_TO_CREATE_RABBITMQ_QUEUE_NAME=plans-to-create
+NOTIFICATION_EVENTS_RABBITMQ_QUEUE_NAME=notification-events
 # ------------- RabbitMQ configuration -------------
+# ------------- Stripe Provider Configuration-------------
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+STRIPE_ENDPOINT_SECRET=your_stripe_webhook_secret_here
+# ------------- Stripe Provider Configuration-------------
+# ------------- Test E2E Configuration-------------
+TEST_USER_NAME=testuser
+TEST_USER_EMAIL=testuser@example.com
+TEST_USER_PASSWORD=testpassword
+# ------------- Test E2E Configuration-------------
