--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+## Application configuration-------------------------------------------------------
+spring.application.name=invoice-service-api
+## Application configuration-------------------------------------------------------
 ## Hibernate JPA configuration------------------------------------------------------
 spring.datasource.url=jdbc:postgresql://${HOST_DB_CONFIG}:${PORT_DB_CONFIG}/${DATABASE_NAME_DB_CONFIG}
 spring.datasource.username=${USER_NAME_DB_CONFIG}
@@ -35,10 +38,14 @@ spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
-# Application queue names (map from legacy envs as needed)
-app.amqp.queues.invoice-status-updates=${INVOICE_STATUS_ON_RELATED_PLANS_RABBITMQ_QUEUE_NAME:invoice-status-on-related-plans}
-app.amqp.queues.plans-to-create=${PLANS_TO_CREATE_RABBITMQ_QUEUE_NAME:plans-to-create}
+# Application queue names
+rabbitmq.queue.invoice-status-on-related-plans=${INVOICE_STATUS_ON_RELATED_PLANS_RABBITMQ_QUEUE_NAME:invoice-status-on-related-plans}
+rabbitmq.queue.notification-events=${NOTIFICATION_EVENTS_RABBITMQ_QUEUE_NAME:notification-events}
 ## RabbitMQ configuration-------------------------------------------------------
+## Stripe configuration---------------------------------------------------------
+stripe.secret-key=${STRIPE_SECRET_KEY}
+stripe.webhook-secret=${STRIPE_ENDPOINT_SECRET}
+## Stripe configuration---------------------------------------------------------
 ## OpenAPI / Swagger UI configuration------------------------------------------
 # Serve Swagger UI at /doc (instead of the default /swagger-ui/index.html)
 springdoc.swagger-ui.path=/doc
