REM-7: Update the DB configuration for SSL true in prod or false for local development.

--- a/docker/docker-prod.env.example
+++ b/docker/docker-prod.env.example
@@ -36,6 +36,10 @@ USER_NAME_DB_CONFIG=your_db_user
 
 # Database password (use strong password)
 USER_PASSWORD_DB_CONFIG=your_secure_db_password
+
+# Database SSL mode (require for managed databases like Digital Ocean, disable for local)
+# Options: disable, allow, prefer, require, verify-ca, verify-full
+DB_SSL_MODE=require
 # ------------- Database Configuration-------------
 
 # ------------- JWT Provider Configuration-------------
