--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ spring.application.name=invoice-service-api
 ## Application configuration-------------------------------------------------------
 
 ## Hibernate JPA configuration------------------------------------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5433/remotejob
+spring.datasource.url=jdbc:postgresql://localhost:5433/remotejob?sslmode=disable
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
