--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,7 @@ ARG PORT_DB_CONFIG_ARG
 ARG DATABASE_NAME_DB_CONFIG_ARG
 ARG USER_NAME_DB_CONFIG_ARG
 ARG USER_PASSWORD_DB_CONFIG_ARG
+ARG DB_SSL_MODE_ARG
 
 # --- JWT ---
 ARG JWT_URL_ENDPOINT_ARG
@@ -75,6 +76,7 @@ ENV PORT_DB_CONFIG=${PORT_DB_CONFIG_ARG}
 ENV DATABASE_NAME_DB_CONFIG=${DATABASE_NAME_DB_CONFIG_ARG}
 ENV USER_NAME_DB_CONFIG=${USER_NAME_DB_CONFIG_ARG}
 ENV USER_PASSWORD_DB_CONFIG=${USER_PASSWORD_DB_CONFIG_ARG}
+ENV DB_SSL_MODE=${DB_SSL_MODE_ARG}
 
 # --- JWT ---
 ENV JWT_URL_ENDPOINT=${JWT_URL_ENDPOINT_ARG}
