REM-7: Remove SSL mode parameter from JDBC URL to match working plan-service configuration
- Remove ?sslmode=${DB_SSL_MODE:require} from JDBC URL in application.properties
- Remove DB_SSL_MODE_ARG from Dockerfile
- Remove DB_SSL_MODE build argument from build-prod.sh
- Remove SSL Mode logging from InvoiceServiceAPIApplication.java

This aligns with the working plan-service-api-v2 configuration which uses a
simple JDBC URL without explicit SSL parameters. PostgreSQL JDBC driver will
handle SSL negotiation automatically when connecting to Digital Ocean managed
databases.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=invoice-service-api
 ## Application configuration-------------------------------------------------------
 ## Hibernate JPA configuration------------------------------------------------------
-spring.datasource.url=jdbc:postgresql://${HOST_DB_CONFIG}:${PORT_DB_CONFIG}/${DATABASE_NAME_DB_CONFIG}?sslmode=${DB_SSL_MODE:require}
+spring.datasource.url=jdbc:postgresql://${HOST_DB_CONFIG}:${PORT_DB_CONFIG}/${DATABASE_NAME_DB_CONFIG}
 spring.datasource.username=${USER_NAME_DB_CONFIG}
 spring.datasource.password=${USER_PASSWORD_DB_CONFIG}
 spring.jpa.show-sql=true
