Add MDC logging, RabbitMQ queue for plans creation, and refactor message handling
- Introduce correlation context logging using MDC to improve tracking across log messages.
- Add `rabbitmq.queue.plans-to-create` to configuration and bind it in `RabbitConfig`.
- Refactor `RabbitMQService` with improved logging and direct message sending method.
- Enhance subscription and one-time payment flows with detailed logging and correlation tracking.
- Update RabbitMQ integration for plan creation and notifications with structured message handling.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -36,6 +36,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.invoice-status-on-related-plans=invoice-status-on-related-plans
+rabbitmq.queue.plans-to-create=plans-to-create
 rabbitmq.queue.notification-events=notification-events
 ## RabbitMQ configuration-------------------------------------------------------
 
@@ -47,3 +48,9 @@ stripe.webhook-secret=whsec_your_webhook_secret_here
 ## OpenAPI / Swagger UI configuration------------------------------------------
 springdoc.swagger-ui.path=/doc
 ## OpenAPI / Swagger UI configuration------------------------------------------
+## Logging configuration-----------------------------------------------------
+# Log pattern with MDC correlation context
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%X{correlationId:-NO_CORRELATION_ID}] [%X{userId:-}] [%X{invoiceId:-}] --- [%t] %-40.40logger{39} : %m%n
+logging.level.com.remotejob.invoiceservice=DEBUG
+logging.level.org.springframework.amqp=DEBUG
+## Logging configuration-----------------------------------------------------
