--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,7 @@ spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
 # Application queue names
 rabbitmq.queue.invoice-status-on-related-plans=${INVOICE_STATUS_ON_RELATED_PLANS_RABBITMQ_QUEUE_NAME:invoice-status-on-related-plans}
+rabbitmq.queue.plans-to-create=${PLANS_TO_CREATE_RABBITMQ_QUEUE_NAME:plans-to-create}
 rabbitmq.queue.notification-events=${NOTIFICATION_EVENTS_RABBITMQ_QUEUE_NAME:notification-events}
 ## RabbitMQ configuration-------------------------------------------------------
 ## Stripe configuration---------------------------------------------------------
@@ -50,3 +51,9 @@ stripe.webhook-secret=${STRIPE_ENDPOINT_SECRET}
 # Serve Swagger UI at /doc (instead of the default /swagger-ui/index.html)
 springdoc.swagger-ui.path=/doc
 ## OpenAPI / Swagger UI configuration------------------------------------------
+## Logging configuration-----------------------------------------------------
+# Log pattern with MDC correlation context
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%X{correlationId:-NO_CORRELATION_ID}] [%X{userId:-}] [%X{invoiceId:-}] --- [%t] %-40.40logger{39} : %m%n
+logging.level.com.remotejob.invoiceservice=INFO
+logging.level.org.springframework.amqp=INFO
+## Logging configuration-----------------------------------------------------
