--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,8 +9,16 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.generate-ddl=true
+# For local development: Use 'validate' with Flyway (recommended)
+# Or use 'create-drop' for quick resets (data will be lost on restart)
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
+## Flyway Configuration for Local Development
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+# Show Flyway migration details in logs
+spring.flyway.clean-disabled=false
 ## Hibernate JPA configuration------------------------------------------------------
 
 ## Web server configuration-----------------------------------------------------
@@ -53,4 +61,6 @@ springdoc.swagger-ui.path=/doc
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p [%X{correlationId:-NO_CORRELATION_ID}] [%X{userId:-}] [%X{invoiceId:-}] --- [%t] %-40.40logger{39} : %m%n
 logging.level.com.remotejob.invoiceservice=DEBUG
 logging.level.org.springframework.amqp=DEBUG
+# Show Flyway migration details
+logging.level.org.flywaydb=DEBUG
 ## Logging configuration-----------------------------------------------------
