--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,28 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Enable Hibernate's automatic session context management to avoid
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
-# Initialize the database using data.sql on startup
-spring.jpa.generate-ddl=true
+# Using 'validate' because Flyway now manages the schema
+# Hibernate will only validate that entities match the database schema
+spring.jpa.hibernate.ddl-auto=validate
+# Disable Hibernate's DDL generation (Flyway handles this)
+spring.jpa.generate-ddl=false
 ## Hibernate JPA configuration------------------------------------------------------
+## Flyway Database Migration configuration------------------------------------------
+# Enable Flyway for automatic database migrations
+spring.flyway.enabled=true
+# Location of migration scripts
+spring.flyway.locations=classpath:db/migration
+# Baseline existing databases (important for production with existing data)
+spring.flyway.baseline-on-migrate=true
+# Baseline version (migrations below this are ignored on first run)
+spring.flyway.baseline-version=0
+# Validate migrations against the schema history
+spring.flyway.validate-on-migrate=true
+# Allow mixing transactional and non-transactional migrations
+spring.flyway.mixed=false
+# Fail on missing migrations
+spring.flyway.fail-on-missing-locations=false
+## Flyway Database Migration configuration------------------------------------------
 ## Web server configuration-----------------------------------------------------
 # Use the env var SERVER_PORT_LISTENING to set the port
 server.port=${SERVER_PORT_LISTENING}
